--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require-dev": {
         "ergebnis/composer-normalize": "^2.44",
         "friendsofphp/php-cs-fixer": "^3.64",
+        "pestphp/pest": "^3.4",
         "phpstan/phpstan": "^1.12"
     },
     "autoload": {
@@ -16,7 +17,8 @@
     },
     "config": {
         "allow-plugins": {
-            "ergebnis/composer-normalize": true
+            "ergebnis/composer-normalize": true,
+            "pestphp/pest-plugin": true
         }
     },
     "scripts": {
@@ -24,6 +26,7 @@
             "composer normalize",
             "vendor/bin/php-cs-fixer fix .",
             "vendor/bin/phpstan"
-        ]
+        ],
+        "test": "vendor/bin/pest"
     }
 }
