--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "ergebnis/composer-normalize": "^2.44",
         "friendsofphp/php-cs-fixer": "^3.64",
         "pestphp/pest": "^3.4",
-        "phpstan/phpstan": "^1.12"
+        "php-di/php-di": "^7.0",
+        "phpstan/phpstan": "^1.12",
+        "slim/psr7": "^1.7"
     },
     "autoload": {
         "psr-4": {
