--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "ezyang/htmlpurifier": "^4.17",
         "friendsofphp/php-cs-fixer": "^3.64",
         "jms/serializer": "^3.30",
+        "monolog/monolog": "^3.7",
         "pestphp/pest": "^3.4",
         "php-di/php-di": "^7.0",
         "phpstan/phpstan": "^1.12",
