--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "psr/simple-cache": "^3.0",
         "slim/psr7": "^1.7",
         "symfony/cache": "^7.1",
-        "symfony/filesystem": "^7.1"
+        "symfony/filesystem": "^7.1",
+        "symfony/property-access": "^7.1",
+        "symfony/serializer": "^7.1"
     },
     "autoload": {
         "psr-4": {
