--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "reun/php-app-config": "^0.2.0"
     },
     "require-dev": {
+        "bnf/phpstan-psr-container": "^1.0",
         "ergebnis/composer-normalize": "^2.44",
         "ezyang/htmlpurifier": "^4.17",
         "friendsofphp/php-cs-fixer": "^3.64",
@@ -13,6 +14,7 @@
         "monolog/monolog": "^3.7",
         "pestphp/pest": "^3.4",
         "php-di/php-di": "^7.0",
+        "phpstan/extension-installer": "^1.4",
         "phpstan/phpstan": "^1.12",
         "psr/simple-cache": "^3.0",
         "slim/psr7": "^1.7",
@@ -30,7 +32,8 @@
     "config": {
         "allow-plugins": {
             "ergebnis/composer-normalize": true,
-            "pestphp/pest-plugin": true
+            "pestphp/pest-plugin": true,
+            "phpstan/extension-installer": true
         }
     },
     "scripts": {
