--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "bnf/phpstan-psr-container": "^1.0",
         "doctrine/orm": "^3.3",
         "ergebnis/composer-normalize": "^2.44",
+        "erusev/parsedown": "^1.7",
         "ezyang/htmlpurifier": "^4.17",
         "friendsofphp/php-cs-fixer": "^3.64",
         "jms/serializer": "^3.30",
@@ -24,7 +25,10 @@
         "symfony/cache": "^7.1",
         "symfony/filesystem": "^7.1",
         "symfony/property-access": "^7.1",
-        "symfony/serializer": "^7.1"
+        "symfony/serializer": "^7.1",
+        "twig/intl-extra": "^3.13",
+        "twig/markdown-extra": "^3.13",
+        "twig/twig": "^3.14"
     },
     "autoload": {
         "psr-4": {
