--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "jms/serializer": "^3.30",
         "maximebf/debugbar": "^1.23",
         "middlewares/debugbar": "^2.1",
+        "middlewares/negotiation": "^2.1",
         "monolog/monolog": "^3.7",
         "pestphp/pest": "^3.4",
         "php-di/php-di": "^7.0",
@@ -22,13 +23,15 @@
         "phpstan/phpstan": "^1.12",
         "psr/simple-cache": "^3.0",
         "slim/psr7": "^1.7",
+        "slim/slim": "^4.14",
         "symfony/cache": "^7.1",
         "symfony/filesystem": "^7.1",
         "symfony/property-access": "^7.1",
         "symfony/serializer": "^7.1",
         "twig/intl-extra": "^3.13",
         "twig/markdown-extra": "^3.13",
-        "twig/twig": "^3.14"
+        "twig/twig": "^3.14",
+        "zeuxisoo/slim-whoops": "^0.7.3"
     },
     "autoload": {
         "psr-4": {
