--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     },
     "require-dev": {
         "bnf/phpstan-psr-container": "^1.0",
+        "composer/class-map-generator": "^1.4",
         "doctrine/orm": "^3.3",
         "ergebnis/composer-normalize": "^2.44",
         "erusev/parsedown": "^1.7",
