--- a/.editorconfig
+++ b/.editorconfig
@@ -4,9 +4,9 @@
 # @author Reun Media <company@reun.eu>
 # @copyright 2020 Reun Media
 #
-# @see https://github.com/Reun-Media/project-templates/blob/master/base/webdev/.editorconfig
+# @see https://github.com/Reun-Media/project-templates
 #
-# @version 2.3.0
+# @version 2.3.1
 #
 
 root = true
