--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "php-di/php-di": "^7.0",
         "phpstan/extension-installer": "^1.4",
         "phpstan/phpstan": "^2.0",
+        "phpstan/phpstan-strict-rules": "^2.0",
         "psr/simple-cache": "^3.0",
         "slim/psr7": "^1.7",
         "slim/slim": "^4.14",
