--- a/composer.json
+++ b/composer.json
@@ -27,11 +27,11 @@
         "ezyang/htmlpurifier": "^4.17",
         "friendsofphp/php-cs-fixer": "^3.64",
         "jms/serializer": "^3.30",
-        "maximebf/debugbar": "^1.23",
         "middlewares/debugbar": "^2.1",
         "middlewares/negotiation": "^2.1",
         "monolog/monolog": "^3.7",
         "pestphp/pest": "^3.4",
+        "php-debugbar/php-debugbar": "^2.2",
         "php-di/php-di": "^7.0",
         "phpstan/extension-installer": "^1.4",
         "phpstan/phpstan": "^2.0",
